--- a/toolkit/chrome/global/aboutReader.properties
+++ b/toolkit/chrome/global/aboutReader.properties
@@ -22,7 +22,6 @@ aboutReader.fontTypeSample=AaÀa
 # for the font size setting. Tapping different samples will change the font size.
 aboutReader.fontSizeSample=AÀ
 
-aboutReader.toolbar.close=Dùin sealladh an leughadair
 aboutReader.toolbar.typeControls=Uidheaman-smachd sgrìobhaidh
 aboutReader.toolbar.addToReadingList=Cuir ris an liosta leughaidh
 aboutReader.toolbar.removeFromReadingList=Thoir air falbh on liosta leughaidh
@@ -31,3 +30,6 @@ aboutReader.toolbar.closeReadingList=Dùin an liosta leughaidh
 aboutReader.toolbar.share=Co-roinn
 
 aboutReader.footer.deleteThisArticle=Sguab às an t-artaigil seo
+
+# Reader View toolbar button
+readerView.enter=Fosgail am modh leughaidh
